After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779494 - Builder crashes when executing with Valgrind
Builder crashes when executing with Valgrind
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
Flatpak Nightly Channel
Other Linux
: Normal critical
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-02 20:22 UTC by Peter Sonntag
Modified: 2017-03-02 23:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
subprocess: fix assertion now that additional FDs are allowed (1.20 KB, patch)
2017-03-02 23:36 UTC, Christian Hergert
committed Details | Review

Description Peter Sonntag 2017-03-02 20:22:29 UTC
Cloned Gnome ToDo from Git-Master.
Building and executing it works fine.
When executing the application with Valgrind, Builder crashes.
Comment 1 Christian Hergert 2017-03-02 23:36:31 UTC
Created attachment 347106 [details] [review]
subprocess: fix assertion now that additional FDs are allowed

Now that we can have additional FDs for passing to the host process, we
need to update our assertion for the FDList.
Comment 2 Christian Hergert 2017-03-02 23:37:12 UTC
Thanks! Somehow this slipped past assertion checks previously.

Attachment 347106 [details] pushed as b1d12c3 - subprocess: fix assertion now that additional FDs are allowed