subprocess: fix assertion now that additional FDs are allowed

Now that we can have additional FDs for passing to the host process, we
need to update our assertion for the FDList.

https://bugzilla.gnome.org/show_bug.cgi?id=779494